--- a/image.qrc
+++ b/image.qrc
@@ -10,5 +10,6 @@
         <file>zttf.jpg</file>
         <file>dcf.jpg</file>
         <file>dyf.jpg</file>
+        <file>login.jpeg</file>
     </qresource>
 </RCC>
