--- a/check_out.ui
+++ b/check_out.ui
@@ -66,7 +66,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>30</x>
       <y>100</y>
       <width>101</width>
       <height>61</height>
@@ -78,13 +78,13 @@
      </font>
     </property>
     <property name="text">
-     <string>姓        名：</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;姓 名：&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>20</x>
       <y>180</y>
       <width>101</width>
       <height>61</height>
@@ -96,13 +96,13 @@
      </font>
     </property>
     <property name="text">
-     <string>房  间  号：</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;房  间  号：&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>20</x>
       <y>260</y>
       <width>111</width>
       <height>61</height>
@@ -114,13 +114,13 @@
      </font>
     </property>
     <property name="text">
-     <string>入住时间：</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;入住时间：&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>20</x>
       <y>340</y>
       <width>101</width>
       <height>61</height>
@@ -132,7 +132,7 @@
      </font>
     </property>
     <property name="text">
-     <string>退房时间：</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;退房时间：&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="out_time">
