--- a/loginwindow.ui
+++ b/loginwindow.ui
@@ -45,12 +45,12 @@
      <rect>
       <x>-1</x>
       <y>0</y>
-      <width>801</width>
-      <height>600</height>
+      <width>800</width>
+      <height>480</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/gif1.gif&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/login.jpeg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QFrame" name="frame">
@@ -70,7 +70,7 @@
     </property>
     <property name="styleSheet">
      <string notr="true">border: 2px solid rgba(0, 0, 0, 150); /* 黑色边框，150为不透明度 */
-    background-color: rgba(255, 255, 255, 200); /* 白色背景，200为不透明度 */
+    background-color: rgba(255, 255, 255, 100); /* 白色背景，200为不透明度 */
     border-radius: 10px; /* 圆角边框 */</string>
     </property>
     <property name="frameShape">
