--- a/reservation.ui
+++ b/reservation.ui
@@ -65,9 +65,9 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>160</x>
+       <x>30</x>
        <y>100</y>
-       <width>121</width>
+       <width>181</width>
        <height>61</height>
       </rect>
      </property>
@@ -86,9 +86,9 @@
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>160</x>
+       <x>30</x>
        <y>180</y>
-       <width>111</width>
+       <width>201</width>
        <height>61</height>
       </rect>
      </property>
@@ -183,9 +183,9 @@
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>160</x>
+       <x>30</x>
        <y>260</y>
-       <width>81</width>
+       <width>181</width>
        <height>61</height>
       </rect>
      </property>
@@ -199,6 +199,22 @@
      </property>
      <property name="text">
       <string>房     型：</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>590</x>
+       <y>40</y>
+       <width>181</width>
+       <height>151</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>提示：入住时间格式00000000一二位表示月份，三四位表示日期，五六位表示时，七八位表示分</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
