--- a/reservation_list.ui
+++ b/reservation_list.ui
@@ -51,7 +51,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>370</x>
       <y>90</y>
       <width>101</width>
       <height>51</height>
@@ -69,7 +69,7 @@
    <widget class="QTextEdit" name="numberinput">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>0</x>
       <y>90</y>
       <width>241</width>
       <height>51</height>
@@ -387,7 +387,7 @@
    <widget class="QPushButton" name="pushButton_12">
     <property name="geometry">
      <rect>
-      <x>660</x>
+      <x>700</x>
       <y>90</y>
       <width>101</width>
       <height>51</height>
@@ -405,7 +405,7 @@
    <widget class="QPushButton" name="new_2">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>480</x>
       <y>90</y>
       <width>101</width>
       <height>51</height>
@@ -423,7 +423,7 @@
    <widget class="QPushButton" name="pushButton_search">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>270</x>
       <y>90</y>
       <width>91</width>
       <height>51</height>
@@ -436,6 +436,24 @@
     </property>
     <property name="text">
      <string>查询</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_13">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>90</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid rgba(0, 0, 0, 150); /* 黑色边框，150为不透明度 */
+    background-color: rgba(255, 255, 255, 200); /* 白色背景，200为不透明度 */
+    border-radius: 10px; /* 圆角边框 */</string>
+    </property>
+    <property name="text">
+     <string>取消预约</string>
     </property>
    </widget>
   </widget>
